<resources>
    <string name="app_name">Fit@Work</string>
    <string name="nav_exercices">Übungen</string>
    <string name="nav_history">Verlauf</string>
    <string name="nav_stats">Leaderboard</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="navdrawer_open">Navigation öffnen</string>
    <string name="navdrawer_close">Navigation schließen</string>
    <string name="name_user">[Name]</string>
    <string name="email_user">[E-Mail]</string>
    <string name="lastname_user">[Nachname]</string>
    <string name="gender">[Geschlecht]</string>
    <string name="age">[Alter]</string>
    <string name="height">[Größe]</string>
    <string name="weight">[Gewicht]</string>
    <string name="steps">[Schritte]</string>
    <string name="fitpoints">[Fitpoints]</string>
    <string name="break_time">[Pausenzeit]</string>
    <string name="drink_time">[Trinkpausenzeit]</string>
    <string name="header_greetingLoggedIn">Hallo, </string>
    <string name="header_greetingLoggedOut">Hallo, bitte einloggen!</string>
    <string name="profile_saveChanges">Änderungen speichern</string>
    <string name="profile_editProfile">Profil bearbeiten</string>
    <string name="connection_connectToWifi">Achtung! Du bist aktuell nicht mit dem WLAN verbunden. Möchtest Du trotzdem die Übung durchführen (eventuell hoher Datenverbrauch)?</string>
    <string name="failure_addFitpoints">Fehler! Fitpoints konnten dem Konto nicht hinzugefügt werden!</string>
    <string name="success_addFitpoints">Fitpoints wurden erfolgreich gutgeschrieben!</string>
    <string name="alert_videoEnd">Das Übungsvideo ist zu Ende. Möchtest Du das Video nochmals ansehen oder zurück zur Übersicht? Deine Punkte werden dir erst gutgeschrieben, wenn du zurück zur Übersicht kehrst.</string>
    <string name="success_logout">Erfolgreich ausgeloggt!</string>
    <string name="alert_leaderboardInactive">Du hast der Teilnahme am Leaderboard noch nicht zugestimmt. Wenn du eingeloggt bist, kannst du im Menüpunkt "Profil" der Teilnahme am Leaderboard zustimmen.</string>
    <string name="failure_emailadresswrong">Falsche E-Mail Adresse.</string>
    <string name="failure_emailAdressDoesntExist">E-Mail Adresse existiert nicht.</string>
    <string name="login_sendPasswortResetMail">E-Mail zum Zurücksetzen des Passworts gesendet!</string>
    <string name="login_enterEmailAdress">Bitte E-Mailadresse eingeben.</string>
    <string name="failure_userAlreadyExistst">Dieser Benutzername ist bereits vergeben.</string>
</resources>