<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_streching_sport_and_notification_icon"
            android:title="@string/nav_exercices" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats"
            android:title="@string/nav_stats" />
    </group>


    <item android:title="@string/nav_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/nav_login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_logout" />
            </group>
        </menu>

    </item>


    <item android:title="@string/nav_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/nav_settings" />
            </group>
        </menu>
    </item>
</menu>